--- a/GraphQL-Servidor/package.json
+++ b/GraphQL-Servidor/package.json
@@ -14,6 +14,7 @@
     "graphql": "^14.1.1",
     "graphql-import": "^0.7.1",
     "graphql-tools": "^4.0.4",
+    "mongoose": "^5.4.20",
     "nodemon": "^1.18.10"
   },
   "devDependencies": {
