--- a/GraphQL-Servidor/servidor/package.json
+++ b/GraphQL-Servidor/servidor/package.json
@@ -9,6 +9,7 @@
   "author": "Camilo Tapia",
   "license": "ISC",
   "dependencies": {
+    "apollo-server-express": "^2.4.8",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.1.1",
