--- a/GraphQL-Servidor/servidor/package.json
+++ b/GraphQL-Servidor/servidor/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^1.18.10"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-0": "^6.24.1"
