--- a/GraphQL-Servidor/cliente/package.json
+++ b/GraphQL-Servidor/cliente/package.json
@@ -10,7 +10,8 @@
     "react-apollo": "^2.5.4",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-select": "^3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
