--- a/GraphQL-Servidor/cliente/package.json
+++ b/GraphQL-Servidor/cliente/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "2.1.8",
-    "react-select": "^3.0.4"
+    "react-select": "^3.0.4",
+    "recharts": "^1.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
