--- a/GraphQL-Servidor/servidor/package.json
+++ b/GraphQL-Servidor/servidor/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^2.4.8",
+    "bcrypt": "^3.0.6",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.1.1",
